# ARIA-Cookicutter

./: README.md  cookiecutter.json  requirements.txt
docs/: BEST_PRACTICES.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_creation.py
{{cookiecutter.project_slug}}/: .env  .envrc  AUTHORS.md  Dockerfile  README.md  cookiecutter-config-file.yml  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: job_apptainer.sh  job_docker.sh  main.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  config.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/utils/: util.py
