[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
requires-python = ">={{cookiecutter.minimal_python_version}}"
dependencies = [
    "dotenv>=0.9.9",
    "fsspec>=2025.9.0",
    "s3fs>=2025.9.0",
    "toml>=0.10.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "wandb>=0.22.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
{% if cookiecutter.enable_cuda == 'True' %}
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
{% else %}
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
{% endif %}
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
{% if cookiecutter.enable_cuda == 'True' %}
  { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
{% else %}
  { index = "pytorch-cpu", marker = "sys_platform == 'win32'" },
{% endif %}
]